fix padding on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,7 @@ html, body {
     }
 
     body {
-      padding:0;
+      padding: 2px;
     }
 
 }
